--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/style.min.css">
-  <link rel="icon" href="./favicon.svg" type="image/svg+xml">
+  <link rel="icon" href="./IMG/Favicon.svg" type="image/svg+xml">
   <title>Rafael - Desenvolvedor e Designer</title>
   <meta name="description" content="Desenvolvedor Full Stack e UX / UI Designer
   Localizado no Rio Grande do Sul">
