--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/style.min.css">
   <title>Rafael - Desenvolvedor e Designer</title>
+  <link rel="icon" href="./IMG/Favicon.svg" type="image/svg+xml">
   <meta name="description" content="Desenvolvedor Full Stack e UX / UI Designer
   Localizado no Rio Grande do Sul">
 </head>
